@startuml

title __APP's Class Diagram__\n

  namespace it.unive.dais.legodroid.app {
    class it.unive.dais.legodroid.app.MainActivity {
        {static} - TAG : String
        - statusMap : Map<String, Object>
        - textView : TextView
        # onCreate()
        - anotherCustomLegoMain()
        - applyMotor()
        - customLegoMain()
        - customLegoMainExt()
        - legoMain()
        - setupEditable()
        - updateStatus()
    }
  }
  

  namespace it.unive.dais.legodroid.app {
    class it.unive.dais.legodroid.app.MainActivity.AnotherCustomApi {
        - AnotherCustomApi()
    }
  }
  

  namespace it.unive.dais.legodroid.app {
    class it.unive.dais.legodroid.app.MainActivity.AveragingLightSensor {
        - avgHSV : float[]
        - map : Map<Color, Integer>
        + getColor()
        ~ AveragingLightSensor()
        {static} - distance()
        - nearest()
    }
  }
  

  namespace it.unive.dais.legodroid.app {
    class it.unive.dais.legodroid.app.MainActivity.CustomApi {
        + getLightSensor()
        - CustomApi()
    }
  }
  

  namespace it.unive.dais.legodroid.app {
    class it.unive.dais.legodroid.app.MainActivity.ExtCustomApi {
        - CustomApiExt()
    }
  }
  

  it.unive.dais.legodroid.app.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  it.unive.dais.legodroid.app.MainActivity o-- it.unive.dais.legodroid.lib.plugs.TachoMotor : motor
  it.unive.dais.legodroid.app.MainActivity +-down- it.unive.dais.legodroid.app.MainActivity.AnotherCustomApi
  it.unive.dais.legodroid.app.MainActivity +-down- it.unive.dais.legodroid.app.MainActivity.AveragingLightSensor
  it.unive.dais.legodroid.app.MainActivity +-down- it.unive.dais.legodroid.app.MainActivity.CustomApi
  it.unive.dais.legodroid.app.MainActivity +-down- it.unive.dais.legodroid.app.MainActivity.ExtCustomApi
  it.unive.dais.legodroid.app.MainActivity.AnotherCustomApi -up-|> it.unive.dais.legodroid.app.MainActivity.CustomApi
  it.unive.dais.legodroid.app.MainActivity.AveragingLightSensor -up-|> it.unive.dais.legodroid.lib.plugs.LightSensor
  it.unive.dais.legodroid.app.MainActivity.CustomApi -up-|> it.unive.dais.legodroid.lib.EV3.Api
  it.unive.dais.legodroid.app.MainActivity.ExtCustomApi -up-|> it.unive.dais.legodroid.app.MainActivity.CustomApi


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
